[package]
name = "backendapi"
version = "0.1.0"
authors = ["Sri R"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[[bin]]
path="src/main.rs"
name="backendapi"


[dev-dependencies]
reqwest = "0.11.10"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
